@@ -3,13 +3,13 @@ package com.gaia3d.basic.model;
 import com.gaia3d.basic.exchangable.GaiaBufferDataSet;
 import com.gaia3d.basic.exchangable.GaiaSet;
 import com.gaia3d.basic.geometry.GaiaBoundingBox;
+import com.gaia3d.basic.geometry.modifier.topology.GaiaExtractor;
 import com.gaia3d.basic.model.structure.SceneStructure;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import org.joml.Matrix4d;
-import org.joml.Vector2d;
 import org.joml.Vector3d;
 
 import java.io.Serializable;
@@ -30,8 +30,6 @@ public class GaiaScene extends SceneStructure implements Serializable {
     private Path originalPath;
     private GaiaBoundingBox gaiaBoundingBox;
     private GaiaAttribute attribute;
-
-    // TODO: degree translation
     private Vector3d translation = new Vector3d(0, 0, 0);
 
     public GaiaScene(GaiaSet gaiaSet) {
@@ -71,6 +69,13 @@ public class GaiaScene extends SceneStructure implements Serializable {
         return newBoundingBox;
     }
 
+    public GaiaNode getRootNode() {
+        if (this.nodes.isEmpty()) {
+            return null;
+        }
+        return this.nodes.getFirst();
+    }
+
     public void clear() {
         this.nodes.forEach(GaiaNode::clear);
         this.materials.forEach(GaiaMaterial::clear);
@@ -94,7 +99,6 @@ public class GaiaScene extends SceneStructure implements Serializable {
         clone.setOriginalPath(this.originalPath);
         clone.setGaiaBoundingBox(this.gaiaBoundingBox);
 
-        // attribute is a reference type.
         GaiaAttribute attribute = this.attribute.getCopy();
         clone.setAttribute(attribute);
         return clone;
@@ -108,24 +112,7 @@ public class GaiaScene extends SceneStructure implements Serializable {
         return triangleCount;
     }
 
-    public void makeTriangleFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.makeTriangleFaces();
-        }
-    }
-
-    public void weldVertices(double error, boolean checkTexCoord, boolean checkNormal, boolean checkColor, boolean checkBatchId) {
-        for (GaiaNode node : this.nodes) {
-            node.weldVertices(error, checkTexCoord, checkNormal, checkColor, checkBatchId);
-        }
-    }
-
-    public void unWeldVertices() {
-        for (GaiaNode node : this.nodes) {
-            node.unWeldVertices();
-        }
-    }
-
+    @Deprecated
     public List<GaiaFace> extractGaiaFaces(List<GaiaFace> resultFaces) {
         if (resultFaces == null) {
             resultFaces = new ArrayList<>();
@@ -137,7 +124,7 @@ public class GaiaScene extends SceneStructure implements Serializable {
     }
 
     public void joinAllSurfaces() {
-        GaiaNode rootNode = this.nodes.get(0);
+        GaiaNode rootNode = this.nodes.getFirst();
 
         GaiaMesh meshMaster = new GaiaMesh();
         GaiaPrimitive primitiveMaster = new GaiaPrimitive();
@@ -145,7 +132,8 @@ public class GaiaScene extends SceneStructure implements Serializable {
         primitiveMaster.getSurfaces().add(surfaceMaster);
         meshMaster.getPrimitives().add(primitiveMaster);
 
-        List<GaiaPrimitive> allPrimitives = this.extractPrimitives(null);
+        GaiaExtractor extractor = new GaiaExtractor();
+        List<GaiaPrimitive> allPrimitives = extractor.extractAllPrimitives(this);
         for (GaiaPrimitive primitive : allPrimitives) {
             primitiveMaster.addPrimitive(primitive);
         }
@@ -163,22 +151,6 @@ public class GaiaScene extends SceneStructure implements Serializable {
         children.add(node);
     }
 
-    public void getFinalVerticesCopy(List<GaiaVertex> finalVertices) {
-        // final vertices are the vertices multiplied by the transform matrix of the nodes
-        for (GaiaNode node : this.nodes) {
-            node.getFinalVerticesCopy(null, finalVertices);
-        }
-    }
-
-    public List<GaiaPrimitive> extractPrimitives(List<GaiaPrimitive> resultPrimitives) {
-        if (resultPrimitives == null) {
-            resultPrimitives = new ArrayList<>();
-        }
-        for (GaiaNode node : this.nodes) {
-            node.extractPrimitives(resultPrimitives);
-        }
-        return resultPrimitives;
-    }
 
     public void doNormalLengthUnitary() {
         for (GaiaNode node : this.nodes) {
@@ -186,47 +158,19 @@ public class GaiaScene extends SceneStructure implements Serializable {
         }
     }
 
+    @Deprecated
     public void deleteNormals() {
         for (GaiaNode node : this.nodes) {
             node.deleteNormals();
         }
     }
 
-    public void deleteDegeneratedFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.deleteDegeneratedFaces();
-        }
-    }
-
-    public void spendTranformMatrix() {
-        for (GaiaNode node : this.nodes) {
-            node.spendTranformMatrix();
-        }
-    }
-
-    public void makeTriangularFaces() {
-        for (GaiaNode node : this.nodes) {
-            node.makeTriangularFaces();
-        }
-    }
-
+    @Deprecated
     public int getFacesCount() {
         int facesCount = 0;
         for (GaiaNode node : this.nodes) {
             facesCount += node.getFacesCount();
         }
         return facesCount;
-    }
-
-    public void calculateNormal() {
-        for (GaiaNode node : this.nodes) {
-            node.calculateNormal();
-        }
-    }
-
-    public void calculateVertexNormals() {
-        for (GaiaNode node : this.nodes) {
-            node.calculateVertexNormals();
-        }
     }
 }
